chore(build): agrega dependencias de spark 3.5.0 y configuracion de jvm